# margin

./: .gitignore  CLAUDE.md  README.md  google-credentials.example.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  backup.ts  book-style.ts  devices.ts  ipc.ts  library.ts  main.tsx  panes.ts  project.ts  proofing.ts  search-book.ts  theme.ts  updater.ts  useMedia.ts  width.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/dictionaries/en/: tech.txt
src-tauri/src/: epub.rs  fonts.rs  gdrive.rs  lib.rs  library.rs  main.rs  pdf.rs  project.rs  proofing.rs
src-tauri/stubs/burn-cuda/: Cargo.toml
src-tauri/stubs/burn-cuda/src/: lib.rs
src-tauri/stubs/cubecl-cpu/: Cargo.toml
src-tauri/stubs/cubecl-cpu/src/: lib.rs
src/components/: AddPageMenu.tsx  BackupButton.tsx  BackupSettings.tsx  ConfirmDialog.tsx  CoverArt.tsx  CoverView.tsx  DeviceFrame.tsx  Dock.tsx  EditorView.tsx  ExportPreview.tsx  FindBar.tsx  Icon.tsx  Library.tsx  PdfPreview.tsx  ProofPopover.tsx  ResizeHandle.tsx  RowMenu.tsx  Settings.tsx  Sidebar.tsx
src/editor/: Editor.tsx  FigureView.tsx  FloatingToolbar.tsx  align.ts  extensions.ts  figure.ts  indent.ts  paste.ts  positions.ts  proofing.ts  search.ts
src/export/: epub.ts  exporters.ts  run.ts  typst.ts
src/import/: epub.ts
src/model/: book.ts  fonts.ts
src/store/: useBackup.ts  useBook.ts  useExportPreview.ts  usePreviewMode.ts  useProofing.ts  useTheme.ts  useWidth.ts
src/styles/: app.css  fonts.css  tokens.css
website/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
website/src/components/: AppWindow.astro  BrandIcon.astro  ClosingCta.astro  Compare.astro  DownloadButtons.astro  DownloadScript.astro  Faq.astro  Features.astro  Footer.astro  Hero.astro  Logo.astro  Nav.astro  OfferBadge.astro  Pricing.astro  Privacy.astro  Proofing.astro  Publish.astro
website/src/data/: release.ts  site.ts
website/src/layouts/: Base.astro  Legal.astro
website/src/pages/: index.astro  privacy.astro  terms.astro
website/src/styles/: global.css
